# reduct-bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  buildx.Dockerfile  codecov.yml
.github/actions/aws-cargo-cache/: action.yml
.github/actions/build-binaries/: action.yml
.github/actions/build-docker/: action.yml
.github/actions/coverage/: action.yml
.github/actions/mqtt-input-smoke/: action.yml
.github/actions/ros1-input-smoke/: action.yml
.github/actions/ros2-input-smoke/: action.yml
.github/actions/run-reductstore/: action.yml
.github/actions/shell-input-smoke/: action.yml
.github/actions/snap-release/: action.yml  generate_snapcraft.py  snapcraft.template.yaml
.github/actions/unit-tests/: action.yml
.github/configs/: mqtt_input_it.toml  ros1_input_it.toml  ros2_input_it.toml  shell_input_it.toml
.github/scripts/: ros1_publish.py  ros2_publish.py
.github/workflows/: ci.yml  snap.yml
.kilo/skill/create-pr/: SKILL.md
.kilo/skill/create-pr/scripts/: fetch_pr_template.sh
dev/: README.md  docker-compose.yml
dev/http/: api.py  bridge.toml  docker-compose.yml
dev/mqtt/: Dockerfile  Dockerfile.json  Dockerfile.proto  bridge.toml  docker-compose.yml  factory.proto  publish.py  publish_json.py  publish_proto.py
docker/: docker-entrypoint.sh
examples/: http_config.toml  metric_config.toml  mqtt_config.toml  mqtt_protobuf_config.toml  ros_config.toml
snap/: snapcraft.yaml
snap/hooks/: configure  install
snap/local/: config.toml  run-bridge.sh  start-daemon.sh
src/: cfg.rs  formats.rs  input.rs  main.rs  message.rs  pipeline.rs  remote.rs  runtime.rs  timestamp.rs
src/formats/: json.rs  protobuf.rs  ros1.rs  ros2.rs
src/formats/testdata/: proto.desc
src/input/: ros.rs  ros1.rs  shell.rs
src/input/http/: README.md  mod.rs
src/input/iot/mqtt/: mod.rs  mqtt3.rs  mqtt5.rs
src/input/metrics/: README.md  mod.rs
src/input/mqtt/: README.md  input.rs  mod.rs  mqtt3.rs  mqtt5.rs
src/input/ros1/: README.md  instance.rs  mod.rs  topic_runtime.rs  wildcard.rs
src/input/ros2/: README.md  instance.rs  mod.rs  topic_runtime.rs  wildcard.rs
src/input/shell/: README.md  mod.rs
src/remote/: reduct.rs
src/remote/reduct/: README.md  mod.rs
