[package]
name = "reduct-bridge"
version = "0.2.0"
edition = "2024"


[features]
default = ["shell"]
all-inputs = ["shell", "ros1", "ros2", "metrics", "iot"]
ros1 = ["dep:rosrust"]
ros2 = ["dep:rclrs", "dep:ros2_message"]
shell = []
metrics = ["dep:systemstat"]
mqtt = ["dep:rumqttc", "dep:rustls", "dep:prost-reflect", "dep:prost", "dep:base64"]
iot = ["mqtt"]
ci = []


[dependencies]
tokio = { version = "1.49.0", features = [
  "macros",
  "rt",
  "signal",
  "sync",
  "time",
] }
async-trait = "0.1.89"
toml = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
bytes = "1.11.1"
reduct-rs = { version = "1.19.1" }
anyhow = "1.0.102"
log = "0.4.28"
env_logger = "0.11.8"
regex = "1.12.2"
serde_json = "1.0.145"
url = "2.5.7"
rosrust = { version = "0.9.13", optional = true, git = "https://github.com/reductstore/rosrust.git", tag = "v0.9.13" }
rclrs = { git = "https://github.com/reductstore/ros2_rust", optional = true, version = "0.7.0" }
ros2_message = { git = "https://github.com/reductstore/ros2_message", optional = true, version = "0.1.1" }
systemstat = { version = "0.2.6", optional = true }
rumqttc = { version = "0.25.1", optional = true }
rustls = { version = "0.23.37", optional = true, features = ["ring"] }
prost-reflect = { version = "0.14", optional = true, features = ["serde"] }
prost = { version = "0.13", optional = true }
base64 = { version = "0.22", optional = true }
bytesize = { version = "2", features = ["serde"] }

[dev-dependencies]
rstest = "0.25.0"
futures-util = "0.3.32"

[patch.crates-io]
xml-rpc = { git = "https://github.com/reductstore/rosrust.git", tag = "v0.9.13", package = "xml-rpc" }


[profile.ci]
inherits = "dev"
opt-level = 0
codegen-units = 256
debug = 1
incremental = true
lto = false
